--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -176,10 +176,13 @@
 
          <!--=================== HERO SECTION CONTENTS =====================-->
         <section class="">
-             <h1 class="text-3xl text-center tracking-wider p-2 mt-48 font-sans font-black uppercase">Careers
+             <h1 class="text-3xl text-center tracking-wider p-2 mt-48 font-sans font-black uppercase">
+               Careers
              </h1>
              <hr class="coverHr w-1/4 center mx-auto">
-             <p class="tracking-widest text-center pt-1 font-serif">Join the VINCI team</p>
+             <p class="tracking-widest text-center pt-1 font-serif">
+               Join the VINCI team
+             </p>
          </section>
        </section>
 
