--- a/views/services.hbs
+++ b/views/services.hbs
@@ -325,19 +325,20 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">Codex</h1>
-              <div class="tracking-widest text-left p-4 ml-50">
-                <p>Access the entire codex suite or</p>
-                <p>pick and choose which toolkits to use.</p>
+              <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold uppercase">Codex</h1>
+              <div class="tracking-widest text-left p-4 mt-10">
+                <p>Access the entire codex </p>
+                <p>suite or pick and choose</p>
+                <p>which toolkits to use.</p>
               </div>
               </section>
         </section>
 
         <section class="panel bg-secondary">
           <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
-            <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
-            <hr class=" w-3/4 py-4 font-thin mx-4">
-            <section class="tracking-widest text-left mx-4">
+            <h2 class="text-3xl text-center py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
+            <hr class=" w-3/4 py-4 font-thin mx-auto">
+            <section class="tracking-widest text-center mx-4">
               <p>
                 Instructors face limited time, high costs, and potential hazards during high consequence training. These limitations create a gap between the amount of time/repetitions needed for effective knowledge retention and the available opportunities to train.
               </p>
@@ -355,23 +356,23 @@
 
         <section class="panel bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-            <section class="-ml-2 w-2/3">
-              <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans">Codex Authoring</h2>
-              <hr>
-              <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
+            <section class="mx-auto mt-10 w-2/3">
+              <h2 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Authoring</h2>
+              <hr class="mx-auto">
+              <h4 class="text-xl font-medium my-4 text-center">Fully Customize Your Simulations</h4>
               <ul class="text-md">
-                <li class="tracking-wider leading-loose">
+                <li class="tracking-wider leading-loose ">
                   Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
                 </li>
-                <li class="tracking-wider leading-loose">
+                <li class="tracking-wider leading-loose -mt-2">
                   Create new simulations & training scenarios in a few minutes with codex’s Automated Simulation creator
                 </li>
-                <li class="tracking-wider leading-loose">
+                <li class="tracking-wider leading-loose -mt-2">
                   Deploy and store simulations globally on the cloud.
                 </li>
               </ul>
             </section>
-            <div class="imgSize1">
+            <div class="mr-3 imgSize1">
               <!--IMG IS IN THE CSS BCKGRND -->
             </div>
           </section>
@@ -380,23 +381,23 @@
 
         <section class="panel bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-            <section class="-ml-2 w-2/3">
-              <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Simulator</h1>
+            <section class="mx-auto w-2/3">
+              <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Simulator</h1>
               <hr>
-              <h4 class="text-xl font-medium my-4">Highly Realistic, Interactive VR</h4>
-              <ul>
+              <h4 class="text-xl font-medium my-4 text-center">Highly Realistic, Interactive VR</h4>
+              <ul class="">
                 <li class="tracking-wider leading-loose">
                   Train in highly Realistic 3D environments of simulations created in Codex Authoring.
                 </li>
-                <li class="tracking-wider leading-loose">
+                <li class="tracking-wider leading-loose -mt-2">
                   Access multiple training modes automatically created from authoring data, including walkthroughs, performance tests, and scenarios.
                 </li>
-                <li class="tracking-wider leading-loose">
+                <li class="tracking-wider leading-loose -mt-2">
                   Utilize pre-existing 3D models or access VINCI’s 3D model library and world class modeling service.
                 </li>
               </ul>
            </section>
-            <div class="imgSize2">
+            <div class="mr-3 imgSize2">
               <!--IMG IS IN THE CSS BCKGRND -->
             </div>
           </section>
@@ -406,23 +407,23 @@
 
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-              <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Analytics</h1>
+              <section class="mx-auto w-2/3 ">
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Analytics</h1>
                 <hr>
-                <h4 class="text-xl font-medium my-4">Robust Data Analytics</h4>
+                <h4 class="text-xl font-medium my-4 text-center">Robust Data Analytics</h4>
                 <ul>
                   <li class="tracking-wider leading-loose">
                       Live stream multiple student views as they train in VR.
                   </li>
-                  <li class="tracking-wider leading-loose">
+                  <li class="tracking-wider leading-loose -mt-2">
                     Review video playbacks with timestamps of errors.
                   </li>
-                  <li class="tracking-wider leading-loose">
+                  <li class="tracking-wider leading-loose -mt-2">
                     Gain insights into individual or classroom performance with data visualization and trend analysis.
                   </li>
                 </ul>
               </section>
-              <div class="imgSize3">
+              <div class="mr-3 imgSize3">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
@@ -430,23 +431,23 @@
 
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-              <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
+              <section class="mx-auto w-2/3 ">
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Leverage low-cost VR</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
                 <ul>
                   <li class="tracking-wider leading-loose">
                     Realistic training at 10% of the cost physical simulators and enable more than 10X the number of repetitions.
                   </li>
-                  <li class="tracking-wider leading-loose">
+                  <li class="tracking-wider leading-loose -mt-2">
                     Increase hands-on training time by hundreds of hours.
                   </li>
-                  <li class="tracking-wider leading-loose">
+                  <li class="tracking-wider leading-loose -mt-2">
                     Utilize commercially available headsets like the Vive, Index, and Oculus Quest.
                   </li>
                 </ul>
               </section>
-              <div class="imgSize4">
+              <div class="mr-3 imgSize4">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
@@ -454,8 +455,8 @@
 
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-              <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
+              <section class="mx-auto w-2/3 ">
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Leverage low-cost VR</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
                 <ul>
@@ -467,7 +468,7 @@
                     </li>
                 </ul>
               </section>
-              <div class="imgSize5">
+              <div class="mr-3 imgSize5">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
@@ -475,8 +476,8 @@
 
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-              <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Scalable Collaboration</h1>
+              <section class="mx-auto w-2/3 ">
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Scalable Collaboration</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
                 <ul>
@@ -488,7 +489,7 @@
                     </li>
                 </ul>
               </section>
-              <div class="imgSize6">
+              <div class="mr-3 imgSize6">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
