--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -32,6 +32,8 @@
                 </div>
             </header>
             <hr class="-mt-4">
+
+
               <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">PARTNERS</h1>
               <div class="tracking-widest text-left p-4 ml-50">
                 <p>See how VINCI is changing </p>
@@ -211,9 +213,9 @@
                    <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
                  </nav>
                </div>
-           </header> 
+           </header>
            <hr class="-mt-4">
-             <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold">PARTNERS</h1>
+             <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold uppercase">Partners</h1>
              <div class="tracking-widest text-left p-4 mt-10">
                <p>See how VINCI is changing </p>
                <p>training today.</p>
@@ -229,13 +231,16 @@
                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                        <!--EMPTY DIV FOR SPACE -->
                     </div>
-                    <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                    <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
                       <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
-                        <span>Client</span>
-                        <span class="ml-48">Platform </span>
+                        <span class="-ml-4">Client</span>
+                        <span class="inline-block ml-20">Platform </span>
                       </h2>
-
-                      <p class="mb-8 leading-relaxed text-primary">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
+                      <h4 class="title-font text-xl mb-4 font-medium text-primary">
+                        <span class="-ml-6">U.S. Air Force</span>
+                        <span class="inline-block ml-24">HTC Vive </span>
+                      </h4>
+                      <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
                         <br><br>
                        VINCI was awarded a contract by the Air Force to develop VR environments and modify CODEX for various USAF aircraft. </p>
                       <div class="flex justify-center">
@@ -251,18 +256,22 @@
           <!-- - - - - - - - - WIND TURBINES ---------------->
           <section class="mb-4 panel background second">
              <section class="text-primary body-font">
-               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
+               <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
                <section class="text-gray-700 body-font">
                   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                      <img class="object-cover object-center rounded p-4" alt="" src="">
+
                     </div>
-                    <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                    <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
                       <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
-                        <span>Client </span>
-                        <span class="hidden lg:inline-block ml-48">Platform </span>
+                        <span class="-ml-4">Client </span>
+                        <span class="inline-block ml-20">Platform </span>
                       </h2>
-                      <p class="mb-8 leading-relaxed text-primary">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
+                      <h4 class="title-font text-xl px-10 mb-4 font-medium text-primary">
+                        <span class="-ml-16">Siemens Gamesa</span>
+                        <span class="inline-block ml-10 pl-8">Mobile </span>
+                      </h4>
+                      <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                       <div class="flex justify-center">
                         <button class="inline-flex text-white border-solid border-2 py-2  px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SGRE</button>
                       </div>
@@ -275,17 +284,22 @@
           <!-- - - - - - - - - Soldier Training ---------------->
            <section class="mb-4 panel background third">
              <section class="text-primary body-font">
-               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
+               <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
                <section class="text-gray-700 body-font">
                   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                       <img class="object-cover object-center rounded" alt="" src="">
                     </div>
-                    <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                      <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
-                        <span class="hidden lg:inline-block ml-48">Platform </span>
+                    <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
+                      <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                        <span class="-ml-4">Client </span>
+                        <span class="inline-block ml-20">Platform </span>
                       </h1>
-                      <p class="mb-8 leading-relaxed text-primary">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
+                      <h4 class="title-font text-xl mb-4 font-medium text-primary">
+                        <span class="-ml-6">U.S. Army </span>
+                        <span class="inline-block ml-20">HTC Vive </span>
+                      </h4>
+                      <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
                        <br><br>
                       Please contact us directly for more information.</p>
                       <div class="flex justify-center">
@@ -300,19 +314,24 @@
           <!-- - - - - - - - - SafetyDNA VR ---------------->
             <section class="mb-4 panel background fourth">
               <section class="text-primary body-font">
-                <h1 class="text-primary font-semibold text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
+                <h1 class="text-primary font-semibold text-center mx-auto sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                        <img class="object-cover object-center rounded" alt="" src="">
                      </div>
-                     <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
-                         <span class="hidden lg:inline-block ml-48">Platform </span>
+                     <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
+                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                         <span class="-ml-4">Client</span>
+                         <span class="inline-block ml-20">Platform </span>
                        </h1>
-                       <p class="mb-8 leading-relaxed text-primary">
+                       <h4 class="title-font text-xl mb-4 font-medium text-primary">
+                         <span class="-ml-6">Select Int.</span>
+                         <span class="inline-block ml-20">HTC Vive</span>
+                       </h4>
+                       <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary text-left">
                          Teaching personal safety in the automobile manufacturing industry is a difficult task, but it is a deparately needed one. Every year, thousands of Americans are injured on manufacturing floors due to largely preventable causes.
-                         <br> <br>
+                         <br>
                          Working with Select Int., VINCI helped prototype a VR version of their SAFETYDNA workplace safety training; workers can now get the experience of being injured due to unsafe actions in VR without the actual physical consequences. By doing this, the principles of SafetyDNA can be deeply embedded into workers’ minds, making them remember safety traits better on real-world lines.
                         </p>
                        <div class="flex justify-center">
