--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -138,6 +138,73 @@
            <p>Book a demo.</p>
          </div>
         </section>
+        <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+          <section class="text-gray-700 body-font relative">
+            <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
+            <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+             <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left">Contact VINCI</h2>
+                 <hr class="w-4/5 mb-8">
+                  <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
+                  <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
+
+                  <textarea class="w-4/5 opacity-75 border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
+                  <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
+                  <p class="text-xs text-gray-500 mt-3"></p>
+                </div>
+
+              <div class="lg:w-1/3 md:w-1/2 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32 object-cover"
+                <h2></h2>
+                <img  class="" src="../public/img/placeholder.png" alt="">
+                <img  class="mt-20" src="../public/img/placeholder.png" alt="">
+              </div>
+            </div>
+          </section>
+      </section>
+
+      <section class="bg-secondary panel">
+         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
+           <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+           <div class="flex flex-col justify-center mt-24">
+              <a class="flex flex-col justify-center" href="/blogs">
+                  <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+              </a>
+              <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+              <a class="flex flex-col justify-center" href="/contact">
+                  <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+              </a>
+           </div>
+           <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+             <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+               <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+             </div>
+             <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+               <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                 <nav class="list-none mb-10 -mt-24">
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
+                   </li>
+                 </nav>
+               </div>
+             </div>
+           </div>
+         </footer>
+      </section>
      </section>   <!-- end of mobile container -->
 
     </section> <!-- end of panel container -->
