--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -40,9 +40,9 @@
             <p>Book a demo.</p>
           </div>
          </section>
-         <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+         <section class="px-16 bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
-             <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
+             <div class=" container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
              <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
               <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left">Contact VINCI</h2>
                   <hr class="w-4/5 mb-8">
@@ -54,8 +54,8 @@
                    <p class="text-xs text-gray-500 mt-3"></p>
                  </div>
 
-               <div class="lg:w-1/3 md:w-1/2 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32 object-cover">
-                 <h2 class="text-primary text-xl text-light">Here at Vinci, we believe in making simulated training more efficient and accessible.
+               <div class=" md:w-5/12 rounded-lg sm:mr-10 mt-24 flex -ml-20 object-cover">
+                 <h2 class="text-primary text-xl text-thin text-left tracking-widest leading-10">Here at Vinci, we believe in making simulated training more efficient and accessible.
                   If you think this tool is right for your team, please reach out to schedule a call or a demo.</h2>
                  <img  class="" src="../public/img/placeholder.png" alt="">
                  <img  class="mt-20" src="../public/img/placeholder.png" alt="">
@@ -146,7 +146,7 @@
             <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
                 <h2 class="text-primary text-3xl mb-8 font-medium title-font text-center">Contact VINCI</h2>
                  <hr class="mx-auto w-4/5 mb-8">
-                 <p class="text-primary text-lg text-center text-light mb-8">
+                 <p class="text-primary text-lg text-center text-thin mb-8">
                    Here at Vinci, we believe in making simulated training more efficient and accessible.
                     If you think this tool is right for your team, please reach out to schedule a call or a demo.
                   </p>
