Blog mobile styles

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -645,7 +645,7 @@
                  }
 
                  .carousel-cell {
-                   width: 85%;
+                   width: 85% !important;
                    height: 260px;
                    /* flex-box, center image in cell */
                    display: -webkit-box;
