--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -226,7 +226,7 @@ MOBILE VIEW ====================================================================
  						<h4 class="tracking-widest text-left p-4">Learn more about XR and its applications</h4>
  				    <div class="flex flex-wrap -m-4">
  							<!-- blog1 -->
-								<div class="p-4 md:w-1/3 text-primary">
+								<div class="h-full p-4 md:w-1/3 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1592478411213-6153e4ebc07d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1300&q=80" alt="blog">
 	 				          <div class="p-6">
@@ -249,7 +249,7 @@ MOBILE VIEW ====================================================================
 						</section>
  							<!-- blog2 -->
  							<div class="panel">
-								<div class="p-4 md:w-1/3 text-primary">
+								<div class="h-full p-4 md:w-1/3 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/flagged/photo-1556470234-36a5389f905a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="blog">
 	 				          <div class="p-6">
@@ -271,7 +271,7 @@ MOBILE VIEW ====================================================================
  							</div>
  							<!-- blog3 -->
  							<div class="panel">
-								<div class="p-4 md:w-1/3 text-primary">
+								<div class="h-full p-4 md:w-1/3 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1094&q=80" alt="blog">
 	 				          <div class="p-6">
@@ -293,7 +293,7 @@ MOBILE VIEW ====================================================================
  							</div>
  							<!-- blog4 -->
  							<div class="panel">
-								<div class="p-4 md:w-1/3 mb-32 text-primary">
+								<div class="h-full p-4 md:w-1/3 mb-32 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-display">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="../public/img/af-training.png" alt="blog">
 	 				          <div class="p-6">
@@ -320,55 +320,83 @@ MOBILE VIEW ====================================================================
 
 
 			<section class="panel">
- 				<!--==================
- 				 FOOTER SECTION
- 				==================-->
+				<!--==================
+				 FOOTER/CONTACT SECTION
+				==================-->
+				<section class="panel">
 
- 				<section class="bg-secondary">
-            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-              <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
-              <div class="flex flex-col justify-center mt-24">
-              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-              <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-              <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
-              </div>
-              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
-                <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-                  <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
-                </div>
-                <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
-                  <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-                    <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
-                    <nav class="list-none mb-10 -mt-24">
-                      <li>
-                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
-                      </li>
-                      <li>
-                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
-                      </li>
-                      <li>
-                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
-                      </li>
-                      <li>
-                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
-                      </li>
-                      <li>
-                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
-                      </li>
-                      <li>
-                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
-                      </li>
-                    </nav>
-                  </div>
-                </div>
-              </div>
-            </footer>
-         </section>
- 			</section>
+					<section class="bg-secondary panel">
+						 <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+							 <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+							 <div class="flex flex-col justify-center mt-24">
+									<a class="flex flex-col justify-center" href="/blogs">
+										<button class="w-2/3 md:w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Check Out Our Blogs</button>
+									</a>
+									<p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+									<a class="flex flex-col justify-center" href="/contact">
+									<button class=" w-2/3 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Reach Out To Us</button>
+									</a>
+							 </div>
+							 <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+								 <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+									 <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+								 </div>
+								 <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+									 <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+										 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+										 <nav class="list-none mb-10 -mt-24">
+											 <li>
+												 <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+											 </li>
+											 <li>
+												 <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+											 </li>
+											 <li>
+												 <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+											 </li>
+											 <li>
+												 <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CAREERS</a>
+											 </li>
+											 <li>
+												 <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+											 </li>
+											 <li>
+												 <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/contact">CONTACT</a>
+											 </li>
+										 </nav>
+									 </div>
+								 </div>
+							 </div>
+							 <div class="bg-gray-200">
+								 <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+									 <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
+										 <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+									 </p>
+									 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+										 <a class="text-gray-500">
+											 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+												 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+											 </svg>
+										 </a>
+										 <a class="ml-3 text-gray-500">
+											 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+												 <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+											 </svg>
+										 </a>
+										 <a class="ml-3 text-gray-500">
+											 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+												 <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+												 <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+											 </svg>
+										 </a>
+									 </span>
+								 </div>
+							 </div>
+						 </footer>
+					</section>
+				</section>
 
-			<section class="panel">
 
-			</section>
 
 		 </section>   <!-- end of mobile container -->
 
