--- a/views/about.hbs
+++ b/views/about.hbs
@@ -60,7 +60,7 @@
                       </p>
                  </div>
                  <div class="w-2/5 p-12">
-                     <div class="imgSize1">
+                     <div class="imgSize1A">
                          <!-- <img id="vitruve" class="object-cover h-full mt-6" src="../public/img/vitruve.jpg" alt=""> -->
                      </div>
                  </div>
@@ -81,7 +81,7 @@
              </p>
            </div>
            <div class="w-2/5 p-12">
-               <div class="imgSize2">
+               <div class="imgSize2A">
                    <!-- <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci"> -->
                </div>
            </div>
@@ -538,7 +538,7 @@
                       </p>
                  </div>
                  <div class="p-4">
-                     <div class="imgSize1">
+                     <div class="imgSize1A">
                          <!-- <img id="vitruve" class="object-cover h-full mt-6" src="../public/img/vitruve.jpg" alt=""> -->
                      </div>
                  </div>
@@ -559,7 +559,7 @@
              </p>
            </div>
            <div class="lg:w-2/5 p-4 bg-secondary w-full">
-               <div class="imgSize2  bg-secondary">
+               <div class="imgSize2A  bg-secondary">
                    <!-- <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci"> -->
                </div>
            </div>
