--- a/public/css/about.css
+++ b/public/css/about.css
@@ -24,19 +24,19 @@ body{
   height: 12px;
 }
 
-.imgSize1, .imgSize2{
+.imgSize1A, .imgSize2A{
   background: red;
   height: 468px;
   width: 330px;
 }
 
-.imgSize1{
+.imgSize1A{
   background-image: url("../img/vitruve.jpg");
   background-size: cover;
 }
 
 
-.imgSize2{
+.imgSize2A{
   background-image: url("../img/leo.png");
   background-size: cover;
   }
