--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -199,6 +199,10 @@
           background-color: rgba(0,0,0, 0.5);
         }
 
+        .flickity-slider{
+          top: -50px;
+        }
+
         .partner-link {
             position: absolute;
             right: 0;
