--- a/public/css/services.css
+++ b/public/css/services.css
@@ -29,7 +29,7 @@ nav li {
 }
 
 .imgSize1{
-background-image: url("../img/codexscreenshot.jpg");
+background-image: url("../img/codexscreenshot.JPG");
 }
 
 .imgSize2{
